로깅 추가, 코드 개선